fix(styles): fix height overflowing issue

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -5,13 +5,7 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
-/* * {
-  margin: 0;
-} */
-html, body {
-  height: 100%;
-  max-height: 530px;
-}
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
